objects/Product_Tier_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <description>What it Does? Decides M2M, Annual M2M or Annual Pre-Pay
Downstream Impact? Effects quote and line item totals
Which department is owner? IT/Product Mgmt</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual M2M</fullName>
                </value>
                <value>
                    <fullName>M2M</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Annual Pre-Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Range__c</fullName>
        <description>What it Does? For PCC, store the suggested discount for enterprise seat count range 
Downstream Impact? Quote and DQ 
Which department is owner? IT</description>
        <label>Discount Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NG1_APAC_ANZ_AUD_Price__c</fullName>
        <description>What it Does? AUD Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG1_APAC_ANZ_AUD_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG2_BRAZIL_BRL_Price__c</fullName>
        <description>What it Does? BRL Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG2_BRAZIL_BRL_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG3_EMEA_EUR_Price__c</fullName>
        <description>What it Does? EUR Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG3_EMEA_EUR_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG3_EMEA_GBP_Price__c</fullName>
        <description>What it Does? GBP Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG3_EMEA_GBP_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG3_EMEA_USD_Price__c</fullName>
        <label>NG3_EMEA_USD_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG4_APAC_JAPAN_YEN_Price__c</fullName>
        <description>What it Does? YEN Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG4_APAC_JAPAN_YEN_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG5_NA_CAD_Price__c</fullName>
        <description>What it Does? CAD Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG5_NA_CAD_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG5_NA_USD_Price__c</fullName>
        <description>What it Does? USD Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG5_NA_USD_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG5_NZD_Price__c</fullName>
        <description>What it Does? NZD Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG5 NZD Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG5_ZAR_Price__c</fullName>
        <description>What it Does? ZAR Price for this Tier for the concerned Product.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>NG5_ZAR_Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Product for which this tiered pricing is setup.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Tier Pricings</relationshipLabel>
        <relationshipName>Product_Tier_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range_From__c</fullName>
        <description>What it Does? Start of Range for this Tier.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>Range From</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_To__c</fullName>
        <description>What it Does? End of Range for this Tier.
Downstream Impact? N/A
Which department is owner? Product/Offer Management</description>
        <label>Range To</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Tier Pricing</label>
    <nameField>
        <displayFormat>PTP-{0000}</displayFormat>
        <label>Product Tier Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tier Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>